# flow

./: CMakeLists.txt  README.md  qt_task_framwork.hpp
app/: main.cpp
configs/: proto_demo.json
core/: export.hpp  flow_task.cpp  flow_task.hpp  global_store.hpp  hex_util.hpp  itask.hpp  mailbox.hpp  message.hpp  message_bus.cpp  message_bus.hpp  plugin_api.hpp  scheduler_task.cpp  scheduler_task.hpp  schema_registry.hpp  supervisor.cpp  supervisor.hpp  task_base.cpp  task_base.hpp  task_manager.cpp  task_manager.hpp  ts_prio_queue.hpp  ts_queue.hpp
gpxm_sw/: aixsim.cpp  aixsim.h  deviceConfig - 副本.ini  deviceConfig.ini  gpxm_sw.pro  main.cpp  参数设置.ini
gpxm_sw/config/: deviceConfig.ini  参数设置.ini
gpxm_sw/device/: TrackPanelDevice.cpp  TrackPanelDevice.h  TractorDevice.cpp  TractorDevice.h  device.pri  motordevice.cpp  motordevice.h  plcdevice.cpp  plcdevice.h
gpxm_sw/file/: excelfunc.cpp  excelfunc.h  file.pri  inifunc.cpp  inifunc.h
gpxm_sw/flow/: devicemanager.cpp  devicemanager.h  flow.pri  levelingsession.cpp  levelingsession.h  netdataprocessing.cpp  netdataprocessing.h  precisiondataprocessing.cpp  precisiondataprocessing.h  tracklevelingsolver.cpp  tracklevelingsolver.h
gpxm_sw/network/: httpserver.cpp  httpserver.h  modbushelper.cpp  modbushelper.h  modbussequencer.cpp  modbussequencer.h  network.pri  sequencequeue.cpp  sequencequeue.h  udpclient.cpp  udpclient.h
gpxm_sw/qftp/: Qt5Ftp.lib  Qt5Ftpd.lib  qftp.pri
gpxm_sw/view/: CustomDoubleSpinBox.cpp  CustomDoubleSpinBox.h  FtpClient.cpp  FtpClient.h  FtpClient.ui  SystemConfigForm.cpp  SystemConfigForm.h  SystemConfigForm.ui  colorheader.cpp  colorheader.h  configform.cpp  configform.h  configform.ui  customlineedit.cpp  customlineedit.h  dataform.cpp  dataform.h  dataform.ui  keyboard.cpp  keyboard.h  keyboard.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  multiplcclientform.cpp  multiplcclientform.h  mytable.cpp  mytable.h  mytable.ui  src.qrc  tqrcalculationform.cpp  tqrcalculationform.h  tqrcalculationform.ui  tuingform.cpp  tuingform.h  tuingform.ui  view.pri  (+3 more)
gpxm_sw/view/UI/: ui_FtpClient.h  ui_SystemConfigForm.h  ui_configform.h  ui_dataform.h  ui_keyboard.h  ui_loginwidget.h  ui_mainwidget.h  ui_mainwindow.h  ui_mainwindow.ui.h  ui_mytable.h  ui_tqrcalculationform.h  ui_tuingform.h  ui_workform.h
gpxm_sw/view/img/: black - 副本.css  black.css  light.css
modules/datahub/: datahub_task.cpp  datahub_task.hpp
modules/log_service/: log_service.cpp  log_service.hpp
modules/metrics_service/: metrics_task.cpp  metrics_task.hpp
modules/proto_engine/: bt.cpp  bt.hpp  expr_eval.cpp  expr_eval.hpp  field_codec.cpp  field_codec.hpp  protocol_engine_task.cpp  protocol_engine_task.hpp
modules/replay_service/: replay_task.cpp  replay_task.hpp
modules/udp_service/: udp_socket.cpp  udp_socket.hpp  udp_task.cpp  udp_task.hpp
tasks/: processor_task.hpp
test/: config_form_widget.hpp  data_form_widget.hpp  device_config_loader_legacy.hpp  ftp_task.hpp  ftp_widget.hpp  login_widget.hpp  main.cpp  main_window.hpp  measure_task.hpp  measure_widget.hpp  modbus_bridget.hpp  motor_command_bridge.hpp  motor_common.hpp  motor_control_task.hpp  motor_device.hpp  motor_state_task.hpp  multi_plc_widget.hpp  plc_command_task.hpp  plc_device.hpp  system_config_widget.hpp  tuning_widget.hpp  udp_client_task.hpp  udp_widget.hpp  work_widget.hpp
ui/: mainwindow.cpp  mainwindow.hpp  shell_window.cpp  shell_window.hpp  ui_adapter_task.cpp  ui_adapter_task.hpp  ui_bridge.cpp  ui_bridge.hpp  view_api.hpp
ui/builtin_views/: view_protocol_console.cpp  view_protocol_console.hpp  view_supervisor.cpp  view_supervisor.hpp  view_udp_console.cpp  view_udp_console.hpp
